Added recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="tasks_fragment_text_view">Tasks</string>
     <string name="top_right_menu_item_about">О программе</string>
     <string name="top_right_menu_item_settings">Настройки</string>
+    <string name="button_create">Create</string>
 </resources>
