Adding creation  activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,10 @@
     <string name="tasks_fragment_text_view">Tasks</string>
     <string name="top_right_menu_item_about">О программе</string>
     <string name="top_right_menu_item_settings">Настройки</string>
-    <string name="button_create">Create</string>
+    <string name="button_create">Создать</string>
+    <string name="creation_note_hint_header">Название</string>
+    <string name="creation_note_hint_text">Текст</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="creation_top_checkable">Checkable</string>
+    <string name="creation_top_fixed">Fixed</string>
 </resources>
