--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_main2">Main2Activity</string>
     <string name="creation_top_checkable">Checkable</string>
     <string name="creation_top_fixed">Fixed</string>
+    <string name="creation_top_alarm">Alarm</string>
 </resources>
