--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="creation_top_checkable">Checkable</string>
     <string name="creation_top_fixed">Fixed</string>
     <string name="creation_top_alarm">Alarm</string>
+    <string name="menu_select_delete">Удалить</string>
 </resources>
