--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="strings_main_bottom_menu_trash">Корзина</string>
     <string name="strings_main_bottom_menu_calendar">Каленадрь</string>
     <string name="strings_main_bottom_menu_notes">Записи</string>
+    <string name="creation_checkbox_hint">Новый пункт</string>
 </resources>
