Add amount of letter is name / Delete unnecessary player icons / Add Delete button / Now u cant start game if there are not at least 2 players

--- a/Monopoly/app/src/main/res/values/strings.xml
+++ b/Monopoly/app/src/main/res/values/strings.xml
@@ -2,5 +2,11 @@
     <string name="app_name">Best Monopoly Ever!</string>
     <string name="buttonPlay">Play</string>
     <string name="buttonExit">Exit</string>
+    <string name="buttonBack">Back</string>
+    <string name="buttonEnter">Enter</string>
+    <string name="buttonStart">Start</string>
+    <string name="buttonDelete">Delete</string>
+    <string name="playersTitle">Players:</string>
     <string name="startGameToast">Time to play the Game!</string>
+    <string name="nameSize">Name should be from 1 to 15 symbols!</string>
 </resources>
