all string resources with english localization

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -84,59 +84,59 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="main_character_name">Персонаж</string>
-    <string name="input_main_character_name">Введите имя персонажа</string>
-    <string name="character_stat_points">Очки:</string>
+    <string name="main_character_name">Character</string>
+    <string name="input_main_character_name">Enter character name</string>
+    <string name="character_stat_points">Points:</string>
     <string name="character_stats_firstpoints">5</string>
     <string name="text_minus">-</string>
-    <string name="character_stats_text_strength">СИЛ: </string>
+    <string name="character_stats_text_strength">STR: </string>
     <string name="text_plus">+</string>
-    <string name="character_stats_text_agility">ЛОВ: </string>
-    <string name="character_stats_text_intellect">ИНТ: </string>
-    <string name="character_create">СОЗДАТЬ</string>
-    <string name="fight_text_kick">УДАР</string>
-    <string name="fight_text_heal">ЛЕЧЕНИЕ</string>
-    <string name="fight_text_magic">МАГИЯ</string>
-    <string name="fight_text_hardKick">СИЛЬНО УДАРИТЬ</string>
+    <string name="character_stats_text_agility">AGL: </string>
+    <string name="character_stats_text_intellect">INT: </string>
+    <string name="character_create">CREATE</string>
+    <string name="fight_text_kick">KICK</string>
+    <string name="fight_text_heal">HEAL</string>
+    <string name="fight_text_magic">MAGIC</string>
+    <string name="fight_text_hardKick">HARD KICK</string>
     <string name="fight_text_todo">TODO</string>
-    <string name="fight_text_fight">В БОЙ!</string>
-    <string name="in_location_text_menu">МЕНЮ</string>
-    <string name="in_location_text_loc">ЛОК</string>
-    <string name="in_location_text_stats">СТАТЫ</string>
-    <string name="in_location_text_map">КАРТА</string>
+    <string name="fight_text_fight">FIGHT!</string>
+    <string name="in_location_text_menu">MENU</string>
+    <string name="in_location_text_loc">LOC</string>
+    <string name="in_location_text_stats">STATS</string>
+    <string name="in_location_text_map">MAP</string>
     <string name="main_name_of_the_greatest_game_ever">BM64:REV</string>
-    <string name="main_menu_text_play">Играть</string>
-    <string name="main_menu_text_settings">Настройки</string>
-    <string name="main_menu_text_exit">Выход</string>
+    <string name="main_menu_text_play">Play</string>
+    <string name="main_menu_text_settings">Settings</string>
+    <string name="main_menu_text_exit">Exit</string>
     <string name="text_zero">0</string>
-    <string name="in_location_text_name">Название</string>
-    <string name="in_location_text_description">Описание</string>
+    <string name="in_location_text_name">Name</string>
+    <string name="in_location_text_description">Description</string>
     <string name="in_location_text_textview">TextView</string>
     <string name="in_location_text_npc">NPC</string>
-    <string name="in_location_text_difficulty">Сложность:</string>
-    <string name="in_location_text_medium_difficulty">Средняя</string>
-    <string name="in_location_text_attack">Напасть!</string>
-    <string name="in_location_text_talk">Говорить</string>
-    <string name="stats_text_points">Очки:</string>
+    <string name="in_location_text_difficulty">Difficulty:</string>
+    <string name="in_location_text_medium_difficulty">Medium</string>
+    <string name="in_location_text_attack">Fight!</string>
+    <string name="in_location_text_talk">Talk</string>
+    <string name="stats_text_points">Points:</string>
     <string name="stats_text_newpoints">5</string>
-    <string name="log_initialize">Инициализация главного меню.</string>
-    <string name="log_events">Задаём кнопкам события</string>
-    <string name="log_buttons">Вытаскиваем все кнопки по id</string>
-    <string name="log_game_entry">Добавляем событие входа в игру</string>
-    <string name="log_settings_entry">Добавляем событие входа в настройки</string>
-    <string name="log_quit">Добавляем событие выхода из игры</string>
+    <string name="log_initialize">Initializing of the main menu.</string>
+    <string name="log_events">Set events to the buttons</string>
+    <string name="log_buttons">Get all buttons by id</string>
+    <string name="log_game_entry">Set an event of game entry</string>
+    <string name="log_settings_entry">Set an event of settings entry</string>
+    <string name="log_quit">Set an event of exit</string>
     <string name="character_creation_extraname">player</string>
     <string name="text_plusText">plus</string>
     <string name="text_dots">:</string>
     <string name="character_creation_text_attributeNames">atributeNames</string>
     <string name="character_creation_text_totalPoints">totalPoints</string>
-    <string name="fight_log_kick">Удар</string>
-    <string name="fight_log_kicked"> ударил</string>
-    <string name="fight_log_kicks"> урона!</string>
-    <string name="fight_log_just_healed"> только что вылечился!</string>
-    <string name="fight_log_used_magic"> использовал магию!</string>
-    <string name="fight_log_use"> использует </string>
-    <string name="fight_log_you_lose">Ты проиграл, парень :с</string>
-    <string name="fight_log_you_win">Ты победил!</string>
+    <string name="fight_log_kick">Kick</string>
+    <string name="fight_log_kicked"> kicked</string>
+    <string name="fight_log_kicks"> damage!</string>
+    <string name="fight_log_just_healed"> just healed!</string>
+    <string name="fight_log_used_magic"> used magic!</string>
+    <string name="fight_log_use"> uses </string>
+    <string name="fight_log_you_lose">You didn\'t laugh, but you lose :с</string>
+    <string name="fight_log_you_win">You win!</string>
     <string name="text_slash">/</string>
 </resources>
