problem with blanks solved

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -89,10 +89,10 @@
     <string name="character_stat_points">Points:</string>
     <string name="character_stats_firstpoints">5</string>
     <string name="text_minus">-</string>
-    <string name="character_stats_text_strength">STR: </string>
+    <string name="character_stats_text_strength">STR:\u00A0</string>
     <string name="text_plus">+</string>
-    <string name="character_stats_text_agility">AGL: </string>
-    <string name="character_stats_text_intellect">INT: </string>
+    <string name="character_stats_text_agility">AGL:\u00A0</string>
+    <string name="character_stats_text_intellect">INT:\u00A0</string>
     <string name="character_create">CREATE</string>
     <string name="fight_text_kick">KICK</string>
     <string name="fight_text_heal">HEAL</string>
@@ -131,11 +131,11 @@
     <string name="character_creation_text_attributeNames">atributeNames</string>
     <string name="character_creation_text_totalPoints">totalPoints</string>
     <string name="fight_log_kick">Kick</string>
-    <string name="fight_log_kicked"> kicked</string>
-    <string name="fight_log_kicks"> damage!</string>
-    <string name="fight_log_just_healed"> just healed!</string>
-    <string name="fight_log_used_magic"> used magic!</string>
-    <string name="fight_log_use"> uses </string>
+    <string name="fight_log_kicked">\u00A0kicked</string>
+    <string name="fight_log_kicks">\u00A0damage!</string>
+    <string name="fight_log_just_healed">\u00A0just healed!</string>
+    <string name="fight_log_used_magic">\u00A0used magic!</string>
+    <string name="fight_log_use">\u00A0uses\u00A0</string>
     <string name="fight_log_you_lose">You didn\'t laugh, but you lose :с</string>
     <string name="fight_log_you_win">You win!</string>
     <string name="text_slash">/</string>
