--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,10 +89,10 @@
     <string name="character_stat_points">Очки:</string>
     <string name="character_stats_firstpoints">5</string>
     <string name="text_minus">-</string>
-    <string name="character_stats_text_strength">СИЛ: </string>
+    <string name="character_stats_text_strength">СИЛ:\u00A0</string>
     <string name="text_plus">+</string>
-    <string name="character_stats_text_agility">ЛОВ: </string>
-    <string name="character_stats_text_intellect">ИНТ: </string>
+    <string name="character_stats_text_agility">ЛОВ:\u00A0</string>
+    <string name="character_stats_text_intellect">ИНТ:\u00A0</string>
     <string name="character_create">СОЗДАТЬ</string>
     <string name="fight_text_kick">УДАР</string>
     <string name="fight_text_heal">ЛЕЧЕНИЕ</string>
@@ -131,11 +131,11 @@
     <string name="character_creation_text_attributeNames">atributeNames</string>
     <string name="character_creation_text_totalPoints">totalPoints</string>
     <string name="fight_log_kick">Удар</string>
-    <string name="fight_log_kicked"> ударил</string>
-    <string name="fight_log_kicks"> урона!</string>
-    <string name="fight_log_just_healed"> только что вылечился!</string>
-    <string name="fight_log_used_magic"> использовал магию!</string>
-    <string name="fight_log_use"> использует </string>
+    <string name="fight_log_kicked">\u00A0ударил</string>
+    <string name="fight_log_kicks">\u00A0урона!</string>
+    <string name="fight_log_just_healed">\u00A0только что вылечился!</string>
+    <string name="fight_log_used_magic">\u00A0использовал магию!</string>
+    <string name="fight_log_use">\u00A0использует\u00A0;</string>
     <string name="fight_log_you_lose">Ты проиграл, парень :с</string>
     <string name="fight_log_you_win">Ты победил!</string>
     <string name="text_slash">/</string>
