Analyzed by inspector

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,23 @@
 <resources>
     <string name="app_name">WhatToDO</string>
-    <string name="textview">Notes</string>
-    <string name="nav_menu_item_notes">Заметки</string>
-    <string name="nav_menu_item_tasks">Дела</string>
-    <string name="nav_menu_item_calendar">Календарь</string>
-    <string name="tasks_fragment_text_view">Tasks</string>
     <string name="top_right_menu_item_about">О программе</string>
     <string name="top_right_menu_item_settings">Настройки</string>
-    <string name="button_create">Создать</string>
     <string name="creation_note_hint_header">Название</string>
     <string name="creation_note_hint_text">Текст</string>
-    <string name="title_activity_main2">Main2Activity</string>
-    <string name="creation_top_checkable">Checkable</string>
-    <string name="creation_top_fixed">Fixed</string>
-    <string name="creation_top_alarm">Alarm</string>
-    <string name="menu_select_delete">Удалить</string>
+    <string name="creation_top_fixed">Закрепить</string>
+    <string name="creation_top_alarm">Напоминание</string>
     <string name="strings_main_top_menu_search">Поиск</string>
     <string name="strings_main_bottom_menu_trash">Корзина</string>
     <string name="strings_main_bottom_menu_calendar">Каленадрь</string>
     <string name="strings_main_bottom_menu_notes">Записи</string>
-
     <string name="main_notes_recycler_header_all">Все записи</string>
+    <string name="activity_about_textview_text">О приложение</string>
+    <string name="dialog_choose_date">Выбериете дату</string>
+    <string name="dialog_choose_time">Выбериете время</string>
+    <string name="dialog_repeat">Повторять</string>
+    <string name="items_addbutton">Новый пункт</string>
+    <string name="other_notes">Другие записи</string>
+    <string name="no_name">(Без названия)</string>
+    <string name="todo">TODO</string>
+    <!--TODO сделать норм contenDescrition-->
 </resources>
