--- a/Monopoly/app/src/main/res/values/strings.xml
+++ b/Monopoly/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="gameCellDescription">Game cell</string>
     <string name="dices">Dices</string>
     <string name="throw_dices">Throw dices</string>
+    <string name="title_activity_win_screen">WinScreenActivity</string>
 </resources>
