--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Lines</string>
     <string name="score">Current Score:</string>
+    <string name="records">Records</string>
+    <string name="exit">Exit</string>
+    <string name="delete">Delete</string>
+    <string name="start_game">Start Game</string>
 </resources>
