--- a/Monopoly/app/src/main/res/values/strings.xml
+++ b/Monopoly/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="app_name">Best Monopoly Ever!</string>
+    <string name="onAI">AI: ON</string>
+    <string name="offAI">AI: OFF</string>
+    <string name="namespace">Name: %2$s</string>
+    <string name="buyspace">Buy: %2$d</string>
+    <string name="sellspace">Sell: %2$d</string>
+    <string name="chargespace">Charge: %2$d</string>
     <string name="buttonPlay">Play</string>
     <string name="buttonExit">Exit</string>
     <string name="buttonBack">Back</string>
