Дописаны тесты игрового поля (протестирован случай проигрыша, выигрыша, проигрыша с промежуточными поворомати экрана).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,6 @@
     <string name="yourResMes">Результат: </string>
     <string name="newRecordMes"> Это рекорд!</string>
     <string name="button">Button</string>
-    <string name="textview">Текущий</string>
-    <string name="textView">Рекорд</string>
+    <string name="textView1">Результат:</string>
+    <string name="textView2">Рекорд</string>
 </resources>
