--- a/Monopoly/app/src/main/res/values/strings.xml
+++ b/Monopoly/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="removed"> removed</string>
     <string name="startGameToast">Time to play the Game!</string>
     <string name="nameSize">Name should be from 1 to 15 symbols!</string>
+    <string name="containtsString">This name is already exists</string>
     <string name="gameCellDescription">Game cell</string>
     <string name="dices">Dices</string>
     <string name="throw_dices">Throw dices</string>
