--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="exit">Exit</string>
     <string name="delete">Delete</string>
     <string name="start_game">Start Game</string>
+    <string name="enter_name">Enter your name</string>
+    <string name="save">Save</string>
 </resources>
