--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -142,4 +142,5 @@
     <string name="in_location_dialog_text">Exit to the main menu?</string>
     <string name="in_location_text_yes">Yes</string>
     <string name="in_location_text_no">No</string>
+    <string name="in_location_fragment_dead">(мёртв)</string>
 </resources>
