--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,4 +142,5 @@
     <string name="in_location_dialog_text">Выйти в главное меню?</string>
     <string name="in_location_text_yes">Да</string>
     <string name="in_location_text_no">Нет</string>
+    <string name="in_location_fragment_dead">(мёртв)</string>
 </resources>
