--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,7 +131,7 @@
     <string name="character_creation_text_attributeNames">atributeNames</string>
     <string name="character_creation_text_totalPoints">totalPoints</string>
     <string name="fight_log_kick">Удар</string>
-    <string name="fight_log_kicked">\u00A0ударил</string>
+    <string name="fight_log_kicked">\u00A0ударил\u00A0</string>
     <string name="fight_log_kicks">\u00A0урона!</string>
     <string name="fight_log_just_healed">\u00A0только что вылечился!</string>
     <string name="fight_log_used_magic">\u00A0использовал магию!</string>
