-Graphic.java deleted -buttons names move into resources -Storing of map conditions between changing of orientation added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">MinerAndroid</string>
+    <string name="easy">EASY</string>
+    <string name="medium">MEDIUM</string>
+    <string name="hard">HARD</string>
+    <string name="menu">MENU</string>
+    <string name="reload">RELOAD</string>
+    <string name="reload_last">RELOAD LAST</string>
+    <string name="play">PLAY</string>
+    <string name="records">RECORDS</string>
+    <string name="exit">EXIT</string>
 </resources>
