--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="notification_title">Chechers</string>
     <string name="notification_text">We are waiting for you</string>
     <string name="insturcion">Instruction</string>
+    <string name="new_game">New Game</string>
 
     <string name="html">
         <![CDATA[
