fixed small bug in screen rotation added some new features with intents after winning added button to RecordsActivity

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,4 +8,5 @@
     <string name="start_game">Начать игру</string>
     <string name="enter_name">Введите ваше имя</string>
     <string name="save">Сохранить</string>
+    <string name="back">Назад</string>
 </resources>
